# Brain

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LEAN_README.md  Makefile  README.md  bench.py  book.toml  day1-lean4.patch  lakefile.lean  lean4_pnp.lean  pyproject.toml  sieve.ipynb  sieve.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  feature.md  feature.yml
capsules/: IMM_MATH_ALSTEIN01.json  README.md  SIEVE_DAY2.json  _template.jsonc  brain-demo-0001.json  imm-math-alstein01.json  sieve-day2.json  tseitin_n60.cnf  tseitin_n60.drat  tseitin_n60_proof.json
data/: .gitkeep  market-nphard-2025-03-21T16:30:00Z.csv
docs/: .gitkeep  day3_infographic.json  gallery.html
dotnet/: Brain.sln
lean/: .gitignore  Lake.toml  Main.lean  lake-manifest.json  lakefile.lean
notebooks/: render_infographic.ipynb  render_infographic_runner.py
notes/: ci_status.md  index.md  system.mmd
python/: pyproject.toml  validate_capsules.py
python/brain/: __init__.py  core.py  unified_engine.py
python/brain.egg-info/: PKG-INFO  SOURCES.txt
python/brain/tests/: test_core.py  test_unified_engine.py
schema/: capsule.schema.json  infographic.schema.json
schemas/: capsule-3.6.json
scripts/: gen_capsule_cert.py
src/: 404.md  SUMMARY.md  appendix.md  capsules.md  capsules_examples.md  capsules_format.md  diagrams.md  intro.md  roadmap.md
tests/: conftest.py  test_tseitin.py
theme/: overrides.css
tools/: capsule_from_meta.py  inject_smoke_cell.py  proof_v1_1_smoke.py  validate_infographic.py
(+46 files in other folders)
